# CRUD_Actix_Web

./: Cargo.toml  README.md  http_req.http
src/: index.html  main.rs
src/api/: app_errors.rs  author_api.rs  book_api.rs  mod.rs  user_api.rs
src/config/: db_config.rs
src/middleware/: auth_middleware.rs  jwt_config.rs  mod.rs
src/model/: author_model.rs  book_model.rs  mod.rs  user_model.rs
src/repository/: author_repo.rs  book_repo.rs  mod.rs  mongodb_repo.rs
src/routers/: author_router.rs  book_router.rs  mod.rs  user_router.rs
src/utils/: response.rs
